crates/codegen/src/drizzle/tests/snapshots/tern_codegen__drizzle__tests__snapshot_tests__multi_file_index.snap
---
source: crates/codegen/src/drizzle/tests/snapshot_tests.rs
expression: "output.get(\"index.ts\").unwrap()"
---
// Drizzle schema definitions generated by Tern.
//
// This file was automatically generated. Do not edit manually.

export * from "./users";
export * from "./posts";
