crates/codegen/src/drizzle/tests/snapshots/tern_codegen__drizzle__tests__snapshot_tests__snapshot_all_postgres_types.snap
---
source: crates/codegen/src/drizzle/tests/snapshot_tests.rs
expression: "output.get(\"schema.ts\").unwrap()"
---
// Drizzle schema definitions generated by Tern.
//
// This file was automatically generated. Do not edit manually.

import {
  bigint,
  boolean,
  date,
  doublePrecision,
  inet,
  integer,
  interval,
  json,
  jsonb,
  numeric,
  pgTable,
  real,
  serial,
  smallint,
  text,
  time,
  timestamp,
  uuid,
  varchar,
} from "drizzle-orm/pg-core";

export const all_types = pgTable("all_types", {
  id: serial("id").primaryKey(),
  colInt2: smallint("col_int2").notNull(),
  colInt4: integer("col_int4").notNull(),
  colInt8: bigint("col_int8").notNull(),
  colFloat4: real("col_float4").notNull(),
  colFloat8: doublePrecision("col_float8").notNull(),
  colNumeric: numeric("col_numeric", { precision: 10, scale: 2 }).notNull(),
  colBool: boolean("col_bool").notNull(),
  colText: text("col_text").notNull(),
  colVarchar: varchar("col_varchar", { length: 255 }).notNull(),
  colDate: date("col_date").notNull(),
  colTime: time("col_time").notNull(),
  colTimestamp: timestamp("col_timestamp").notNull(),
  colTimestamptz: timestamp("col_timestamptz", { withTimezone: true }).notNull(),
  colInterval: interval("col_interval").notNull(),
  colUuid: uuid("col_uuid").notNull(),
  colJson: json("col_json"),
  colJsonb: jsonb("col_jsonb"),
  colInet: inet("col_inet"),
});
