crates/codegen/src/drizzle/tests/snapshots/tern_codegen__drizzle__tests__snapshot_tests__snapshot_blog_schema_with_relations.snap
---
source: crates/codegen/src/drizzle/tests/snapshot_tests.rs
expression: "output.get(\"schema.ts\").unwrap()"
---
// Drizzle schema definitions generated by Tern.
//
// This file was automatically generated. Do not edit manually.

import { integer, pgTable, serial, text } from "drizzle-orm/pg-core";
import { relations } from "drizzle-orm";

export const users = pgTable("users", {
  id: serial("id").primaryKey(),
  name: text("name").notNull(),
});

export const usersRelations = relations(users, ({ many }) => ({
  posts: many(posts),
}));

export const posts = pgTable("posts", {
  id: serial("id").primaryKey(),
  title: text("title").notNull(),
  authorId: integer("author_id").notNull().references(() => users.id),
});

export const postsRelations = relations(posts, ({ one }) => ({
  author: one(users, {
    fields: [posts.authorId],
    references: [users.id],
  }),
}));
