crates/codegen/src/drizzle/tests/snapshots/tern_codegen__drizzle__tests__snapshot_tests__snapshot_composite_primary_key.snap
---
source: crates/codegen/src/drizzle/tests/snapshot_tests.rs
expression: "output.get(\"schema.ts\").unwrap()"
---
// Drizzle schema definitions generated by Tern.
//
// This file was automatically generated. Do not edit manually.

import { integer, numeric, pgTable, primaryKey } from "drizzle-orm/pg-core";

export const order_items = pgTable("order_items", {
  orderId: integer("order_id").notNull(),
  productId: integer("product_id").notNull(),
  quantity: integer("quantity").notNull(),
  unitPrice: numeric("unit_price", { precision: 10, scale: 2 }).notNull(),
}, (table) => [
  primaryKey({ columns: [table.orderId, table.productId] }),
]);
