crates/codegen/src/drizzle/tests/snapshots/tern_codegen__drizzle__tests__snapshot_tests__snapshot_non_public_schema.snap
---
source: crates/codegen/src/drizzle/tests/snapshot_tests.rs
expression: "output.get(\"schema.ts\").unwrap()"
---
// Drizzle schema definitions generated by Tern.
//
// This file was automatically generated. Do not edit manually.

import { pgSchema, serial, text } from "drizzle-orm/pg-core";

export const myapp = pgSchema("myapp");

export const users = myapp.table("users", {
  id: serial("id").primaryKey(),
  name: text("name").notNull(),
});
