crates/codegen/src/drizzle/tests/snapshots/tern_codegen__drizzle__tests__snapshot_tests__snapshot_reserved_words_table.snap
---
source: crates/codegen/src/drizzle/tests/snapshot_tests.rs
expression: "output.get(\"schema.ts\").unwrap()"
---
// Drizzle schema definitions generated by Tern.
//
// This file was automatically generated. Do not edit manually.

import { boolean, integer, pgTable, serial, text } from "drizzle-orm/pg-core";

export const reserved_words = pgTable("reserved_words", {
  id: serial("id").primaryKey(),
  class: text("class").notNull(),
  default: text("default"),
  export: integer("export").notNull(),
  import: boolean("import").notNull(),
  return: text("return"),
});
