crates/codegen/src/drizzle/tests/snapshots/tern_codegen__drizzle__tests__snapshot_tests__snapshot_simple_users_table.snap
---
source: crates/codegen/src/drizzle/tests/snapshot_tests.rs
expression: "output.get(\"schema.ts\").unwrap()"
---
// Drizzle schema definitions generated by Tern.
//
// This file was automatically generated. Do not edit manually.

import { pgTable, serial, text, timestamp } from "drizzle-orm/pg-core";

export const users = pgTable("users", {
  id: serial("id").primaryKey(),
  email: text("email").notNull().unique(),
  name: text("name"),
  createdAt: timestamp("created_at", { withTimezone: true }).notNull(),
});
